--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>CodeRoom🚀✨-Create Online Code Sharing Rooms</title>
+    <meta
+      name="description"
+      content="Join and create rooms instantly. CodeRoom connects everyone in real-time."
+    />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<title>CodeRoom - Online Rooms</title>
+<meta
+  name="description"
+  content="Join and create rooms instantly. CodeRoom connects everyone in real-time."
+/>
